--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
 workflows:
   build-deploy:
     jobs:
-      - js_build
+      - Deploy App
       - build_server_pdfs: 
           filters:
             branches:
