--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
 workflows:
   build-deploy:
     jobs:
-      - frontend:deploy
+      - build
       - build_server_pdfs: 
           filters:
             branches:
