--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ orbs:
 
   # different jobs are calles later in the workflows sections
 jobs:
-  build:
+  build_dev:
     docker:
       # the base image can run most needed actions with orbs
       - image: "cimg/base:stable"
@@ -31,18 +31,51 @@ jobs:
           name: Front-End Build
           command: |
             npm run frontend:build
+
+  build_master:
+    docker:
+      # the base image can run most needed actions with orbs
+      - image: "cimg/base:stable"
+    steps:
+      - node/install
+      - checkout
+      - aws-cli/setup
+      - run:
+          name: Front-End Install
+          command: |
+            npm run frontend:install
+      - run:
+          name: Back-End Install
+          command: |
+            npm run backend:install
+      - run:
+          name: Back-End Build
+          command: |
+            npm run backend:build
+      - run:
+          name: Front-End Build
+          command: |
+            npm run frontend:build
       - run:
           name: Deploy
           command: |
             npm run frontend:deploy
 
 
-
 workflows:
   version: 2.1
-  BRANCH_TO_IGNORE:
+
+  build_dev:    
     jobs:
-      - build:
+      - build_dev:
           filters:
             branches:
-              ignore: main
+              only:
+                - main
+  build_master:    
+    jobs:
+      - build_master:
+          filters:
+            branches:
+              only:
+                - master
