add chrome enviroments to test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,6 +40,8 @@ jobs:
     docker:
       # the base image can run most needed actions with orbs
       - image: "cimg/base:stable"
+        environment:
+          CHROME_BIN: /usr/bin/google-chrome
     steps:
       - node/install
       - checkout
