--- a/shoppingApp-Clinet/package.json
+++ b/shoppingApp-Clinet/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build --configuration=production",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
+    "test": "ng test  --no-watch --no-progress --browsers=ChromeHeadlessCI",
     "deploy": "chmod +x ./bin/deploy.sh && ./bin/deploy.sh"
   },
   "private": true,
