--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@ orbs:
   # orgs contain basc recipes and reproducible actions (install node, aws, etc.)
   node: circleci/node@4.1.0
   aws-cli: circleci/aws-cli@1.3.1
+  browser-tools: circleci/browser-tools@1.2.3
 
   # different jobs are calles later in the workflows sections
 jobs:
@@ -10,7 +11,15 @@ jobs:
     docker:
       # the base image can run most needed actions with orbs
       - image: "cimg/base:stable"
+      - image: "cimg/node:16.13.1-browsers"
     steps:
+      - browser-tools/install-chrome
+      - browser-tools/install-chromedriver
+      - run:
+          command: |
+            google-chrome --version
+            chromedriver --version
+          name: Check install
       - node/install
       - checkout
       - aws-cli/setup
