--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,7 @@ jobs:
     docker:
       # the base image can run most needed actions with orbs
       - image: "cimg/base:stable"
+      - image: cimg/node:16.13.1-browsers
     steps:
       - browser-tools/install-chrome
       - browser-tools/install-chromedriver
