--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,9 +49,15 @@ jobs:
     docker:
       # the base image can run most needed actions with orbs
       - image: "cimg/base:stable"
-        environment:
-          CHROME_BIN: /usr/bin/google-chrome
+      - image: cimg/node:16.13.1-browsers
     steps:
+      - browser-tools/install-chrome
+      - browser-tools/install-chromedriver
+      - run:
+          command: |
+            google-chrome --version
+            chromedriver --version
+          name: Check install
       - node/install
       - checkout
       - aws-cli/setup
