--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,7 @@ version: 2.1
 orbs:
   # orgs contain basc recipes and reproducible actions (install node, aws, etc.)
   node: circleci/node@4.1.0
+  eb: circleci/aws-elastic-beanstalk@2.0.1
   aws-cli: circleci/aws-cli@1.3.1
   browser-tools: circleci/browser-tools@1.2.3
 
@@ -56,9 +57,12 @@ jobs:
             google-chrome --version
             chromedriver --version
           name: Check install
-      - node/install
-      - checkout
+      - node/install:
+          node-version: '16.14.2'
+      - eb/setup
       - aws-cli/setup
+      - checkout
+
       - run:
           name: Front-End Install
           command: |
