--- a/shopping_app_api/package.json
+++ b/shopping_app_api/package.json
@@ -8,7 +8,8 @@
     "build": "rimraf -rf ./dist &&npx  tsc",
     "test": "  db-migrate up --env test up &&  npx tsc  && Env=test jasmine && db-migrate reset  --env test ",
     "watch": "tsc-watch --esModuleInterop src/server.ts --outDir ./dist --onSuccess \"node ./dist/server.js\"",
-    "deploy": " rimraf -rf ./dist && npx  tsc && eb list && eb use shopping-prod && eb deploy"
+    "deploy": " rimraf -rf ./dist && npx  tsc && eb list && eb use shopping-prod && eb deploy",
+    "setenv": "chmod +x ./bin/deploy.sh && ./bin/deploy.sh"
   },
   "engines" : { 
     "npm" : ">=8.5.0",
